fix nav bar not showing completely on mobile

--- a/plugins/rlje-wp-plugin/rlje-theme-settings/themes/umc/css/style.css
+++ b/plugins/rlje-wp-plugin/rlje-theme-settings/themes/umc/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     /* background: #011f36; */
-    background: #011f36 url(../img/umc_bkg_f.jpg) no-repeat center center scroll;
+    background: #011f36 url(../img/umc_bkg_f.jpg) no-repeat center center fixed;
     background-size: cover;
     font-family: 'Nunito', sans-serif;
     letter-spacing: 1px;
